--- a/src/assets/style/Simple.scss
+++ b/src/assets/style/Simple.scss
@@ -4,6 +4,7 @@
    position: relative;
 }
 .simple{
+   overflow: hidden; 
    padding:20px 0px 80px 0px;
    background: radial-gradient(123.4% 57.75% at 50% 23.43%, #F3F3F3 0%, #F7F7FF 100%);
 }
@@ -25,7 +26,6 @@ padding: 0 5px;
 @media (max-width:568px) {
    
 .simple__title {
-   
 font-size: 24px;
 line-height: 28px;
 }
