--- a/src/assets/style/effect.scss
+++ b/src/assets/style/effect.scss
@@ -49,6 +49,10 @@
       background:#2c3e5030;
       }
    }
+   .input-div{
+      padding: 0;
+      height: auto;
+   }
    .add__checkbox-btn {
       transition: all .4s;
       &:active{
