--- a/src/assets/style/FormStyle.scss
+++ b/src/assets/style/FormStyle.scss
@@ -21,18 +21,19 @@
    margin-bottom: 44px;
 }
 .form__input,.input{
-   border-radius: 5px;
 background: #FFFFFF;
 width :353px;
 height: 55px;
 display: block;
-margin: 10px auto;
 padding: 20px 20px 18px 60px;
 text-align: left;
 font-size: 16px;
 }
 .input-div{
    position: relative;
+   border-radius: 5px;
+   overflow: hidden;
+   margin: 10px auto;
    &::before{
       content: '';
       width: 21px;
@@ -75,9 +76,36 @@ font-size: 16px;
    width :353px;
    margin-bottom: 28px;
 }
-.form__sing a{
+.form__sing a {
    text-decoration: underline;
+   color: #2C3E50;
+}   
+.form__forgot{
+   color: #2C3E50;
 }
+.form__text{
+   overflow: hidden;
+   border-radius: 5px;
+   margin-bottom: 10px;
+}
+
+.form__select.error
+,.input-div.error,
+.form__text.error{
+   box-shadow: 0  0 10px rgb(255, 0, 0);
+   background: #ffeeee;
+}
+.error_mess{
+   color:#fff;
+   padding: 5px 10px;
+   border-radius: 5px;
+   transition: all .8s;
+   display: block;
+   background: rgb(231, 117, 117);
+   margin-bottom: 10px;
+}
+
+
 @media (max-width:768px) {
    .form__btn,.form__row,.form__input,.input,.form__select>select{
       width: 280px;
